--- a/books/templates/home.html
+++ b/books/templates/home.html
@@ -5,8 +5,14 @@
 <header class="bg-dark py-5" role="banner">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Shop in style</h1>
-            <p class="lead fw-normal text-white-50 mb-0">With this shop homepage template</p>
+            <h1 class="display-4 fw-bolder">Books exchange</h1>
+            <p class="lead fw-normal text-white-50 mb-0">
+                {% if messages %}
+                    {% for message in  messages %}
+                        {{ message }}
+                    {% endfor %}
+                {% endif %}
+            </p>
         </div>
     </div>
 </header>
@@ -30,7 +36,7 @@
                         <!-- Product actions-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center">
-                                <a class="btn btn-outline-dark mt-auto" href="">View {{ book.title }}</a>
+                                <a class="btn btn-outline-dark mt-auto" href="{% url 'book_page' book.id %}">Details</a>
                             </div>
                         </div>
                     </div>
