--- a/books/templates/navbar.html
+++ b/books/templates/navbar.html
@@ -6,22 +6,14 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Marketplace</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'browser' %}">Browser</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">All Products</a></li>
-                        <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                        <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-                    </ul>
-                </li>
-
                 {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">My profile</a></li>
                 {% else %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
                 {% endif %}
             </ul>
+            <!----
             <form class="d-flex">
                 <a href="" class="btn btn-outline-dark">
                         <i class="bi-cart-fill me-1"></i>
@@ -29,6 +21,7 @@
                         <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                 </a>
             </form>
+            -->
         </div>
     </div>
 </nav>
