--- a/books/templates/browser.html
+++ b/books/templates/browser.html
@@ -55,7 +55,7 @@
                                 <!-- Product actions-->
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                     <div class="text-center">
-                                        <a class="btn btn-outline-dark mt-auto" href="/book/${book.id}">View details</a>
+                                        <a class="btn btn-outline-dark mt-auto" href="/books/${book.id}/">View details</a>
                                     </div>
                                 </div>
                             </div>
