--- a/books/templates/browser.html
+++ b/books/templates/browser.html
@@ -5,8 +5,7 @@
 <header class="bg-dark py-5" role="banner">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Shop in style</h1>
-            <p class="lead fw-normal text-white-50 mb-0">With this shop homepage template</p>
+            <h1 class="display-4 fw-bolder">Browse books</h1>
         </div>
     </div>
 </header>
