styling change, fixed exchange system

--- a/books/templates/register.html
+++ b/books/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<section class="vh-100" style="background-color: #4a4948;">
+<section class="vh-100" style="background: linear-gradient(to right, #457fca, #5691c8)">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col col-xl-10">
