--- a/books/templates/book.html
+++ b/books/templates/book.html
@@ -20,7 +20,7 @@
                 {% if book.image %}
                     <img class="img-fluid" src="{{ book.image.url }}" alt="{{ book.title }} image">
                 {% elif book.external_image %}
-                    <img class="img-fluid" src="{{ book.external_image }}" alt="Default book image">
+                    <img class="img-fluid" src="{{ book.external_image }}" alt="{{ book.title }} image">
                 {% else %}
                     <img class="img-fluid" src="{% static 'default_book_image.jpg' %}" alt="Default book image">
                 {% endif %}
